# syntax-parser-prototype

./: .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml  test.py  ~test.py
demos/pysyntax/: config.py  main.py  template.py
demos/quickstart/: main.py  template.py
demos/specials/: main.py
src/syntax_parser_prototype/: __init__.py  baseobjects.py  debug.py  exceptions.py  phrases.py  streams.py  tokens.py  typing.py  utils.py  visualisation.py
src/syntax_parser_prototype/features/: __init__.py  indices.py  readers.py  tokenize.py
src/syntax_parser_prototype/main/: __init__.py  phrase.py  streams.py  tokens.py
